# shaktool-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
cobe/: brain.py
src/: db.rs  main.rs
src/api/: crocomire.rs  deertier.rs  llm.rs  mod.rs  mtg.rs  oembed.rs  openai.rs  quad.rs  smz3.rs  speedrun.rs  wiki.rs
src/commands/: config.rs  general.rs  leaderboard.rs  mod.rs  multiworld.rs  quad.rs  smz3.rs  speedrun.rs  time.rs
src/interactions/: mod.rs  multiworld.rs  speedrun.rs
src/tasks/: mod.rs  speedrun.rs
src/tasks/speedrun/: demo.rs  judge.rs
src/util/: cobe.rs  mod.rs  slugid.rs
