[package]
name = "shaktool-rs"
version = "2.0.0"
authors = ["tewtal <total@viskos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
maplit = "1.0"
base64 = "0.21"
uuid = "1.4"
reqwest = "0.11"
inline-python = "0.11"
serde = "1.0"
serde_json = "1.0"
mediawiki = "0.2"
urlencoding = "2.1"
chrono = "0.4"
chrono-tz = "0.8"
dtparse = "1.5.0"
kuchiki = "0.8"
cached = "0.44"
phf = { version = "0.11", features = ["macros"] }
serenity = { git = "https://github.com/serenity-rs/serenity.git", features = ["unstable_discord_api"] }
#async-openai = "0.12"
#ndarray = "0.15"
#ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
futures = "0.3"
strum = "0.25"
strum_macros = "0.25"
