[package]
name = "shaktool-rs"
version = "2.0.0"
authors = ["tewtal <total@viskos.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
maplit = "1.0"
base64 = "0.22"
uuid = "1.23"
reqwest = { version = "0.12", features = ["json"] }
inline-python = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mediawiki = "0.5"
urlencoding = "2.1"
chrono = "0.4"
chrono-tz = "0.10"
dtparse = "1.5.0"
kuchiki = "0.8"
cached = { version = "0.54", features = ["async"] }
phf = { version = "0.11", features = ["macros"] }
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "cache"] }
poise = "0.6"
#async-openai = "0.12"
#ndarray = "0.15"
#ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
futures = "0.3"
strum = "0.26"
strum_macros = "0.26"
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
